tests/errors/synonym_arity_err/synonym_arity_err.c
#error synonym_arity_err.synonym_arity_err:7:16 Type arity mismatch. The type 'Stack' expected 1 arguments; but given 2.
#error synonym_arity_err.synonym_arity_err:10:15 Type arity mismatch. The type 'Stack' expected 1 arguments; but given 0.
